# Hopeless_Stars

./: Hopeless_Stars.ipynb  Initial.jl  Initial_Siddhartha.jl  Makefile  README.md  adiosTesis.md  compacticity.jl  confident.txt  espiral.txt  evolution.jl  fuentes.jl  initial.jl  input.jl  memetric.jl  metric.jl  neovolution.jl  perturbing.jl  phi1.rt  savedata.jl  supermetric.jl
Stationary/: Compacticidad.jl  Compacticity.jl  Initial.jl  Initial_Poster.jl  Initial_Siddhartha.jl  compacticity.jl  input.jl  stationary.gn  stationary.gnuplot
Talacha/: Integral_Trapz.jl  RK2_Ciurculo.jl  RK2_Gaussiana.jl  RK4_Cohete.jl  evolution1.jl  evolution2.jl  initial_Poster.jl  input.jl  input_Poster.jl  metric.jl
Talacha Alibaba/: My templates.md
Talacha Alibaba/Probation_Period/: Alibaba Test.md  Checkpoint 1.md  Checkpoint 2.md  Daily work report Day 14 & 15.md  Script for the defense.md
Templates/: Escalation templates.md  Model Studio Template.md  Ticket templates.md
cuatro/: L2_Adot.t  L2_adot.t  cuatro.gn
data/: L2_adot.t  perturbing.gn  phi1.rt  phi1.t  stationary.gn
